--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "node-cache": "^5.1.2",
     "p-queue": "^9.1.0",
     "pino": "^8.19.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/qrcode": "^1.5.6",
     "@types/fs-extra": "^11.0.2",
     "@types/node": "^20.8.0",
     "@types/uuid": "^9.0.5",
