fix: resolve LID JIDs to phone-number JIDs for chat/message import

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 WEBHOOK_URL=http://localhost:4000/webhook
+DATABASE_URL=postgres://postgres:qsLdbwueuhAJKIsVvhn06~77IvUMNbAz@turntable.proxy.rlwy.net:23554/railway
 # Optional: DEBUG=baileys* to see the low-level websocket traffic
